[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/frame1/login.gd" type="Script" id=1]
[ext_resource path="res://object/alert/alert.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/sprite2D/UI/background_login.jpg" type="Texture" id=3]
[ext_resource path="res://object/btn_sound/btn_sound.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/sprite2D/UI/form_login.png" type="Texture" id=5]
[ext_resource path="res://reuse/theme/theme_full.tres" type="Theme" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Login"
tracks/0/type = "value"
tracks/0/path = NodePath("Interface/TextureRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 425, 714 ), Vector2( 425, 82 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Interface/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 436, 714 ) ]
}

[node name="Login" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Interface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = 364.0
margin_right = 177.0
margin_bottom = 800.0
texture = ExtResource( 5 )

[node name="LineEditMSSV" type="LineEdit" parent="Interface/TextureRect"]
margin_left = 62.0
margin_top = 225.0
margin_right = 298.0
margin_bottom = 265.0
theme = ExtResource( 6 )
max_length = 8
clear_button_enabled = true
placeholder_text = "MSSV"

[node name="LineEditUseName" type="LineEdit" parent="Interface/TextureRect"]
margin_left = 61.0
margin_top = 287.0
margin_right = 296.0
margin_bottom = 327.0
theme = ExtResource( 6 )
clear_button_enabled = true
placeholder_text = "HỌ VÀ TÊN"

[node name="ButtonStart" type="Button" parent="Interface/TextureRect"]
margin_left = 114.5
margin_top = 350.0
margin_right = 226.5
margin_bottom = 390.0
theme = ExtResource( 6 )
text = "BẮT ĐẦU"

[node name="Sound" parent="Interface" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 60.0

[node name="Alert" parent="Interface" instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Login = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="text_changed" from="Interface/TextureRect/LineEditMSSV" to="." method="_on_LineEditMSSV_text_changed"]
[connection signal="text_changed" from="Interface/TextureRect/LineEditUseName" to="." method="_on_LineEditUseName_text_changed"]
[connection signal="button_up" from="Interface/TextureRect/ButtonStart" to="." method="_on_ButtonStart_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
